--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ h1  {
 h2  {
     color : green;
     font-style : italic;
-    text align : center;
+    text-align : center;
 
 }
 p {
@@ -13,4 +13,7 @@ p {
 }
 ul {
     line-height: 40px;
+}
+body{
+    background-color: aqua;
 }
